@@ -1,3 +1,6 @@
+*Wed Nov 9 2011 Henri Gavin <.> 0.20100105
+- user-manual.html - update suggested text editors and links
+
 *Tue Nov 8 2011 Henri Gavin <.> 0.20100105
 - user-manual.html - simplification of installation instructions
 
